[SLAC22-77] Fix stretching of text box on some overlap images

--- a/web/themes/gesso/source/03-components/overlap-image/_overlap-image.scss
+++ b/web/themes/gesso/source/03-components/overlap-image/_overlap-image.scss
@@ -87,6 +87,7 @@
     position: relative;
 
     @include breakpoint-min(gesso-breakpoint(tablet)) {
+      bottom: auto;
       position: absolute;
       top: 0;
     }
